--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,32 +1,36 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "integration" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "integration" ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+    
     - name: Set up JDK 21 (BellSoft Liberica)
       uses: actions/setup-java@v4
       with:
-          java-version: '21'
-          distribution: 'liberica'
-          cache: maven
+        java-version: '21'
+        distribution: 'liberica'
+        cache: maven
+
+    # Change to the directory where pom.xml is located (optional)
+    - name: Change directory to project folder
+      run: cd 302_Assignment/302_Assignment
+      
+    # Build the project with Maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
