--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
@@ -11,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     
@@ -24,13 +19,13 @@ jobs:
         distribution: 'liberica'
         cache: maven
 
-    # Change to the directory where pom.xml is located (optional)
-    - name: Change directory to project folder
-      run: cd 302_Assignment/302_Assignment
-      
-    # Build the project with Maven
+    # List the directory contents to verify the file structure
+    - name: List directory contents
+      run: ls -R
+
+    # Build the project with Maven, specifying the correct path to pom.xml
     - name: Build with Maven
-      run: mvn -B package
+      run: mvn -B package --file socslingo/pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
