--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,18 +17,20 @@ jobs:
       with:
         java-version: '21'
         distribution: 'liberica'
-        cache: maven
+        # cache: maven  # キャッシュを一時的に無効化
 
-    # List the directory contents to verify the file structure (optional, for debugging)
+    # ディレクトリ構造の確認（オプション）
     - name: List directory contents
       run: ls -R
 
-    # Build the project with Maven, specifying the correct path to pom.xml
+    # Mavenでビルド実行、スタックサイズを増やすためのMAVEN_OPTS設定を追加
     - name: Build with Maven
       run: mvn -B package --file socslingo/pom.xml
+      env:
+        MAVEN_OPTS: "-Xss2m"  # スタックサイズを2MBに増加
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      with:
-        directory: socslingo  # Correct directory for dependency graph generation
+    # 依存関係のスナップショット生成を一時的に無効化（問題解決後再有効化可能）
+    # - name: Update dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    #   with:
+    #     directory: socslingo
